Add scheduled tasks to update books popularity, recommended books, expired discounts, promo codes and subscriptions.